fix background color in dark mode

--- a/libraries/ui-library/src/components/six-root/six-root.scss
+++ b/libraries/ui-library/src/components/six-root/six-root.scss
@@ -42,8 +42,6 @@ header {
   position: sticky;
   top: 0;
   z-index: var(--six-z-index-header);
-  // border fix
-  margin-right: 2px;
 }
 
 main {
